[gd_scene load_steps=15 format=2]

[ext_resource path="res://Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/BasicEnemy.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Bat.png" type="Texture" id=5]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/HealthIndicator.tscn" type="PackedScene" id=7]
[ext_resource path="res://Boxes/SoftOverlap.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 12.5

[sub_resource type="CircleShape2D" id=2]
radius = 9.0

[sub_resource type="CircleShape2D" id=3]
radius = 17.0074

[sub_resource type="CircleShape2D" id=4]
radius = 16.7519

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 213.547

[node name="BasicEnemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 4 )

[node name="SoftOverlap" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftOverlap" index="0"]
position = Vector2( -0.25, -4.75 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -5.25 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.25, -3 )
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -3.25 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fly = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 1 )]

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WanderController" parent="." instance=ExtResource( 6 )]

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource( 6 )

[node name="HealthRemaining" type="Label" parent="."]
visible = false
margin_left = -6.0
margin_top = -25.0
margin_right = 7.0
margin_bottom = -11.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthIndicator" parent="." instance=ExtResource( 7 )]
position = Vector2( -0.5, 10.5 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="health_changed" from="Stats" to="HealthIndicator" method="_on_Stats_health_changed"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]

[editable path="SoftOverlap"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
